--- a/index.html
+++ b/index.html
@@ -66,6 +66,7 @@
       </li>
     </ul>
   </div>
-
+  <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.5.1/jquery.min.js"></script>
+  <script src="./index.js"></script>
 </body>
 </html>
